force-app/main/default/objects/Voo__c/Voo__c.object-meta.xml
<CustomObject>
    <label>Voo</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Voo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>