force-app/main/default/objects/Voo__c/fields/Aeroporto_Chegada__c.field-meta.xml
<CustomField>
    <fullName>Aeroporto_Chegada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aeroporto Chegada</label>
    <referenceTo>Aeroporto__c</referenceTo>
    <relationshipLabel>Voos (Aeroporto Chegada)</relationshipLabel>
    <relationshipName>Voos1</relationshipName>
    <type>Lookup</type>
</CustomField>