force-app/main/default/objects/Voo__c/fields/Assento__c.field-meta.xml
<CustomField>
    <fullName>Assento__c</fullName>
    <label>Assento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>