force-app/main/default/objects/Voo__c/fields/Companhia__c.field-meta.xml
<CustomField>
    <fullName>Companhia__c</fullName>
    <label>Companhia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>