force-app/main/default/objects/Voo__c/fields/Duracao__c.field-meta.xml
<CustomField>
    <fullName>Duracao__c</fullName>
    <label>Duração</label>
    <length>10</length>
    <type>Text</type>
</CustomField>