force-app/main/default/objects/Voo__c/fields/Hora_de_Partida__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_Partida__c</fullName>
    <label>Hora de Partida</label>
    <length>20</length>
    <type>Text</type>
</CustomField>