force-app/main/default/objects/Voo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aeroporto_Partida__c</columns>
    <columns>Aeroporto_Chegada__c</columns>
    <columns>Data_Partida__c</columns>
    <columns>Data_Chegada__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>